# holy-bible-api

./: .gitignore  LICENSE.md  README.md
.cargo-husky/hooks/: pre-commit  pre-push
.github/workflows/: deploy.yaml
.husky/: pre-commit
api/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  eslint.config.mjs  openapi.json
api/src/: app.ts  index.ts  lib.rs  main.rs
api/src/app/: app.rs  listener.rs  mod.rs  router.rs  state.rs
api/src/config/: aws.rs  cors.rs  database.rs  db.ts  env.rs  env.ts  middleware.rs  mod.rs  postgres.rs  redis.rs  server.rs  settings.rs
api/src/controller/: audio_bibles.rs  bibles.rs  error.rs  health.rs  mod.rs  swagger.rs
api/src/controllers/: user.controller.ts
api/src/db/: mod.rs  postgres.rs  redis.rs  s3.rs
api/src/handlers/: bibles.rs  books.rs  chapters.rs  mod.rs  verses.rs
api/src/handlers/audio_bibles/: audio_bibles.rs  books.rs  chapters.rs  mod.rs
api/src/handlers/bibles/: bibles.rs  books.rs  chapters.rs  mod.rs  verses.rs
api/src/handlers/health/: health.rs
api/src/middleware/: compression.rs  cors.rs  mod.rs  rate_limiter.rs  timeout.rs  trace.rs
api/src/middlewares/: error.middleware.ts
api/src/models/: mod.rs  user.model.ts  user.rs
api/src/models/http/: mod.rs
api/src/models/http/params/: bible.rs  books.rs  chapters.rs  common.rs  mod.rs  verses.rs
api/src/models/http/params/audio_bibles/: audio_bible.rs  books.rs  chapters.rs  mod.rs
api/src/models/http/params/bibles/: bible.rs  books.rs  chapters.rs  mod.rs  verses.rs
api/src/models/http/response/: bibles.rs  books.rs  chapters.rs  common.rs  mod.rs  verses.rs
api/src/models/http/response/audio_bibles/: audio_bibles.rs  books.rs  chapters.rs  mod.rs
api/src/models/http/response/bibles/: bibles.rs  books.rs  chapters.rs  mod.rs  verses.rs
api/src/models/sql/: audio_bibles.rs  bible.rs  mod.rs  verse.rs
api/src/repo/: mod.rs
api/src/repo/audio_bible/: interface.rs  mock.rs  mod.rs  postgres.rs  trait_def.rs
api/src/repo/bible/: interface.rs  mock.rs  mod.rs  postgres.rs  trait_def.rs
api/src/repo/blob/: aws.rs  interface.rs  mock.rs  mod.rs  trait_def.rs
api/src/routes/: audio_bibles.rs  bibles.rs  health.rs  mod.rs  swagger.rs  user.route.ts
api/src/service/audio_bibles/: audio_bibles.rs  books.rs  chapters.rs  default.rs  interface.rs  mock.rs  mod.rs  service.rs
api/src/service/audio_bibles/default/: audio_bibles.rs  books.rs  chapters.rs  default.rs  mod.rs
api/src/service/audio_bibles/mock/: mod.rs
api/src/service/bibles/: bibles.rs  default.rs  interface.rs  mock.rs  mod.rs  service.rs  trait_def.rs  verses.rs
api/src/service/bibles/default/: books.rs  chapters.rs  mod.rs  verses.rs
api/src/service/bibles/mock/: mock.rs  mod.rs
api/src/services/: user.service.ts
api/src/utils/: address.rs  logger.ts  logging.rs  mod.rs  openapi.rs  response.ts
api/tests/: README.md  audio_bibles_test.rs  bibles_test.rs  common.rs  health_test.rs
db/: .gitignore  README.md
db/postgres/: init_db.sql  wipe_db_clean.sql
db/redis/: init_redis.sh  redis.conf
docker/: .env.example  Caddyfile  README.md  docker-compose.yml
docker/api/: Dockerfile  README.md
docker/db-restore/: README.md
docker/pg-restore/: Dockerfile  restore.sh
hetzner/: init_api.sh  init_psql.sh  init_redis.sh
hetzner/api/: api.service  build_api.sh  init_api.sh  init_service.sh
hetzner/beszel/: init_beszel.sh
hetzner/caddy/: init_caddy.sh
hetzner/psql/: init_psql.sh
infrastructure/: .gitignore  README.md  main.tf
infrastructure/postgres/: .gitignore  main.tf  outputs.tf  rds.tf  security_group.tf  variables.tf  vpc.tf
infrastructure/redis/: elasticache-redis.tf  outputs.tf  security_group.tf  subnet_group.tf  variables.tf  vpc.tf
infrastructure/s3/: outputs.tf  variables.tf
openapi-clients/: README.md  bump_versions.ts  openapi.json  package-lock.json  package.json  tsconfig.json
openapi-clients/go/demo/: .gitignore  go.mod  main.go
openapi-clients/go/package/: .gitignore  README.md  go.mod  holybible.go
openapi-clients/openapi/: openapi.json
openapi-clients/python/demo/: main.py  pyproject.toml
openapi-clients/python/package/: pyproject.toml
openapi-clients/rust/demo/: Cargo.toml
openapi-clients/rust/demo/src/: main.rs
openapi-clients/rust/package/: Cargo.toml
openapi-clients/rust/package/src/: lib.rs
openapi-clients/scripts/: bump_versions.py
openapi-clients/typescript/demo/: package-lock.json  package.json  tsconfig.json
openapi-clients/typescript/demo/src/: index.ts
openapi-clients/typescript/package/: README.md  package-lock.json  package.json  tsconfig.json
openapi-clients/typescript/package/src/: index.ts
rust-test/: Cargo.toml  README.md
rust-test/src/: main.rs
scraping/audio/raw/biblegateway/: README.md
scraping/audio/raw/digitalbiblesociety/: README.md
scraping/text/: README.md  json_to_db.py  json_to_sql.ts
web/src/app/: layout.tsx
