[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.12"
aws-credential-types = { version = "1.2.1", features = ["hardcoded-credentials"] }
aws-sdk-config = "1.55.0"
aws-sdk-s3 = "1.67.0"
axum = "0.7.9"
dotenvy = "0.15.7"
governor = "0.8.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.21.2", features = ["full"] }
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tower_governor = "0.5.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
