[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.12"
aws-credential-types = { version = "1.2.1", features = ["hardcoded-credentials"] }
aws-sdk-config = "1.55.0"
aws-sdk-s3 = "1.67.0"
axum = "0.7.9"
axum-client-ip = "0.7.0"
dotenvy = "0.15.7"
governor = "0.8.0"
hyper = "1.5.2"
lambda_http = "0.14.0"
redis = "0.27.6"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.21.2", features = ["full"] }
tokio-util = "0.7.13"
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.2", features = ["trace","compression-gzip"] }
tower_governor = "0.5.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = "5.3.0"
utoipa-swagger-ui = { version = "8.1.0", features = ["axum"] }
