[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.8.12"
aws-credential-types = { version = "1.2.11", features = ["hardcoded-credentials"] }
aws-sdk-config = "1.97.0"
aws-sdk-s3 = "1.119.0"
aws-smithy-types = "1.3.5"
async-trait = "0.1.89"
axum = "0.8.8"
axum-client-ip = "1.1.3"
dotenvy = "0.15.7"
governor = "0.10.4"
hyper = "1.8.1"
redis = { version = "1.0.2", features=["tls-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.8", features = ["trace","compression-gzip","cors"] }
tower_governor = "0.8.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
http = "1.4.0"
validator = { version = "0.20.0", features = ["derive"] }
axum-valid = "0.24.0"

[dev-dependencies]
reqwest = { version = "0.13.1", features = ["json"] }
tokio-test = "0.4"
