[package]
name = "holy_bible_api"
version = "1.0.0"
authors = ["Emil Sharkov <emilsharkov@gmail.com>"]
description = "A Rust client library for accessing the Holy Bible API"
license = "MIT"
edition = "2021"
repository = "https://github.com/emilsharkov/holy-bible-api"
readme = "README.md"
keywords = ["bible", "api", "holy-bible", "scripture", "religion"]
categories = ["api-bindings"]
exclude = [
    "src/generated/Cargo.toml",
    "src/generated/docs/",
    "src/generated/git_push.sh",
    "src/generated/README.md",
    "src/generated/src/lib.rs",
]

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

